# gemini-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  README_EN.md  gemini-extension.json  pyproject.toml  workflow.json
.agents/performance-reviewer/: SYSTEM_PROMPT.md
.agents/readability-reviewer/: SYSTEM_PROMPT.md
.agents/review-integrator/: SYSTEM_PROMPT.md
.agents/security-reviewer/: SYSTEM_PROMPT.md
.agents/skills/code-linter/: SKILL.md
.claude/agents/: gemini-integrator.md  harness-architect.md  harness-qa.md  langgraph-developer.md  meta-skill-designer.md
.claude/skills/gemini-cli-extension-packaging/: SKILL.md
.claude/skills/gemini-cli-integration/: SKILL.md
.claude/skills/gemini-harness-builder/: SKILL.md
.claude/skills/harness-port-spec/: SKILL.md
.claude/skills/langgraph-patterns/: SKILL.md
.claude/skills/meta-agent-templates/: SKILL.md
.claude/skills/self-critique-verification/: SKILL.md
_workspace/: linter_spec.md  port-mapping.md
_workspace/adr/: 0001-architecture-manager-worker-registry.md  0002-workflow-json-as-registry-snapshot.md  0003-six-pattern-routing-strategy.md  0004-meta-agent-generation-flow.md  0005-langgraph-version-compat-policy.md
_workspace/examples/: bad_skill_no_entry.md  bad_system_prompt_missing_critique.md  bad_workflow_disconnected.json  good_skill.md  good_system_prompt.md
_workspace/guide/: gemini_integration.md  mcp_tools.md
_workspace/readability-reviewer/: guidelines.md
_workspace/review-integrator/: final_review_report.md
_workspace/schema/: system_prompt.schema.json
_workspace/security-reviewer/: security_review_report.md
commands/harness/: audit.toml  build.toml  evolve.toml  run.toml  status.toml  verify.toml
scripts/smoke/: README.md  live_build.py  live_full.py
src/gemini_harness/: __init__.py  cli.py  config.py  mcp_server.py
src/gemini_harness/integrations/: __init__.py  _errors.py  _metrics.py  _retry.py  cli_bridge.py  gemini_client.py  mcp_adapter.py
src/gemini_harness/meta/: __init__.py  linter.py  render.py
src/gemini_harness/runtime/: __init__.py  _audit.py  _build.py  _evolve.py  _prompts.py  _run.py  _verify.py  builtin_tools.py  compat.py  contracts.py  harness_runtime.py  manager.py  state.py  (+4 more)
tests/: _smoke_live_build.py  _smoke_live_full.py  conftest.py
tests/integration/: test_mcp_server.py  test_parallel_timing.py  test_smoke_fanout.py  test_worker_with_real_linter.py
tests/unit/: test_audit.py  test_build.py  test_cli.py  test_cli_bridge.py  test_config.py  test_create_agent_loop_guard.py  test_evolve.py  test_file_preload.py  test_gemini_client.py  test_linter.py  test_manager.py  test_mcp_adapter.py  test_patterns.py  test_render.py  test_run.py  test_state.py  test_tool_executor_wiring.py  test_verify.py  test_worker.py
(+14 files in other folders)
